<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="251dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="addcase"
        android:text="@string/newcase"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:strokeColor="#FF5722"
        tools:text="ADD NEW CASE" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="makequery"
        android:text="@string/stats"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:strokeColor="#FF5722"
        tools:text="STATISTICS" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="map"
        android:text="@string/map"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:strokeColor="#FF5722"
        tools:text="MAP" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="edit"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:strokeColor="#FF5722"
        tools:text="EDIT" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="44dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="recognize"
        android:text="@string/voice_command"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="#FF5722"
        tools:text="voice command" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:background="#FF5722"
        android:backgroundTint="#FF5722"
        android:enabled="false"
        android:onClick="exit"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="gone"
        app:iconTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="#FF5722"
        tools:text="EXIT" />


</androidx.constraintlayout.widget.ConstraintLayout>