<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCase">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintEnd_toStartOf="@+id/spinner"
      app:layout_constraintStart_toStartOf="@+id/spinner"
      tools:context=".NewCase">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="back"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:strokeColor="#FF5722" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:onClick="firebase"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:strokeColor="#FF5722" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/gender"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/fname"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/lname"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/bdate"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="EMAIL:"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/address"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="209dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:text="@string/newcase"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="#00FF9800"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/address"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:ems="16"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZαβγδεζηθικλμνξοπρστυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ"/>

    <EditText
        android:id="@+id/bdate"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/lname"
        android:digits="1234567890/"
        android:hint="dd/mm/yyyy"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="Ten digit number"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="something@gmail.com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/bdate" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/fname"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZαβγδεζηθικλμνξοπρστυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>