<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        tools:context=".NewCase">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="207dp"
            android:layout_height="69dp"
            android:layout_marginTop="24dp"
            android:text="@string/editcase"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:background="#FF9800"
            android:backgroundTint="#FF9800"
            android:onClick="back"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:iconTint="#FF9800"
            app:layout_constraintEnd_toStartOf="@+id/save2"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt"
            app:strokeColor="#FF5722"
            tools:text="BACK" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="145dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="#FF9800"
            android:backgroundTint="#FF9800"
            android:onClick="firebase"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:iconTint="#FF9800"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="#FF5722" />

        <TextView
            android:id="@+id/address_txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/fname"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt2" />

        <TextView
            android:id="@+id/address_txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/gender"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt2" />

        <TextView
            android:id="@+id/address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/address"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt3" />

        <TextView
            android:id="@+id/address_txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/bdate"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt6" />

        <TextView
            android:id="@+id/address_txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="EMAIL:"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt5" />

        <TextView
            android:id="@+id/address_txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/lname"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt7" />

        <TextView
            android:id="@+id/address_txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/phone"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt4" />

        <EditText
            android:id="@+id/edit_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/address_txt6"
            app:layout_constraintTop_toBottomOf="@+id/edit_fname" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/address_txt4"
            app:layout_constraintTop_toBottomOf="@+id/edit_bdate" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

        <EditText
            android:id="@+id/edit_bdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:digits="1234567890/"
            android:ems="10"
            android:hint="dd/mm/yyyy"
            android:inputType="textPersonName"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/address_txt4"
            app:layout_constraintTop_toBottomOf="@+id/edit_lname" />

        <EditText
            android:id="@+id/edit_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/address_txt6"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:digits="1234567890"
            android:ems="10"
            android:hint="Ten digit number"
            android:inputType="textPersonName"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/address_txt3"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <TextView
            android:id="@+id/address_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/tcase"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_address"
            app:layout_constraintHorizontal_bias="0.242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>